--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "src/index.js",
   "scripts": {
+    "beautiful": "lint-staged",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon --inspect src/index.js",
     "watch": "node-sass --watch src/resources/scss/ --output src/public/css/"
@@ -20,6 +21,9 @@
     "url": "https://github.com/Trinhtrongtinh/nodejs_blog/issues"
   },
   "homepage": "https://github.com/Trinhtrongtinh/nodejs_blog#readme",
+  "lint-staged": {
+    "src/**/*.{js,json,scss}": "prettier --single-quote --trailing-comma all --tab-width 4 --write"
+  },
   "description": "",
   "dependencies": {
     "express": "^4.21.2",
@@ -27,6 +31,9 @@
     "node-sass": "^9.0.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "husky": "^9.1.7",
+    "lint-staged": "^15.4.3",
+    "nodemon": "^3.1.9",
+    "prettier": "^3.5.1"
   }
 }
