--- a/package.json
+++ b/package.json
@@ -24,10 +24,16 @@
   "lint-staged": {
     "src/**/*.{js,json,scss}": "prettier --single-quote --trailing-comma all --tab-width 4 --write"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "description": "",
   "dependencies": {
     "express": "^4.21.2",
     "express-handlebars": "^8.0.1",
+    "mongoose": "^8.10.1",
     "node-sass": "^9.0.0"
   },
   "devDependencies": {
